src/objects/Guidebook_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is batch size Settings for each batch</description>
    <fields>
        <fullName>Api_Key__c</fullName>
        <description>Api Key for Guidebook</description>
        <inlineHelpText>Api Key for Guidebook</inlineHelpText>
        <label>Api Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Admin_Guidebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin Guidebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <label>Organization ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GuideBook Setting</label>
</CustomObject>